<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogoXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-280dp"
            android:layout_marginBottom="-280dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/logo_gift_rojo01"
            android:transitionName="logo_transicion" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint03"
            app:boxStrokeColor="#1B4A56"
            app:hintTextColor="#1B4A56">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtApaterno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint04"
            app:boxStrokeColor="#1B4A56"
            app:hintTextColor="#1B4A56">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAmaterno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint05"
            app:boxStrokeColor="#1B4A56"
            app:hintTextColor="#1B4A56">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCorreoXML"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint01"
            app:boxStrokeColor="#1B4A56"
            app:hintTextColor="#1B4A56">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassXML"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint02"
            app:boxStrokeColor="#1B4A56"
            app:hintTextColor="#1B4A56">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRegistrarXML"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:text="@string/texto05"
                android:textSize="20sp"
                app:icon="@drawable/ic_baseline_how_to_reg_24"
                app:iconSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnIngresarXML"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:text="@string/texto04"
                android:textAllCaps="false"
                android:textColor="#C42217"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegistrarXML" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</ScrollView>