<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogoXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-280dp"
            android:layout_marginBottom="-280dp"
            android:src="@drawable/logo_gift_rojo01"
            android:transitionName="logo_transicionXML" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto01"
                android:textAlignment="center"
                android:textColor="#c42217"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtCorreoXML"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint01"
                app:boxStrokeColor="#1b4a56"
                app:hintTextColor="#1b4a56">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPassXML"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint02"
                app:boxStrokeColor="#1b4a56"
                app:hintTextColor="#1b4a56"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIngresarXML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#c42217"
                android:text="@string/texto02"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:icon="@drawable/ic_baseline_login_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrarXML"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/texto03"
                android:textAllCaps="false"
                android:textColor="#1b4a56"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="100dp"
                android:backgroundTint="#3b5998"
                android:text="Registrar con Facebook"
                app:icon="@drawable/facebook"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleXML"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white"
                android:text="Registrar con Google"
                android:textColor="@color/black"
                app:icon="@drawable/google"
                app:iconSize="30dp"
                app:iconTintMode="multiply" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>